<resources>
    <string name="app_name">SubmissionMade</string>
    <string name="title_movie">Judul Movie</string>
    <string name="release_movie">tanggal release</string>
    <string name="score_movie">score</string>
    <string name="descrip_movie">Deskripsi movie</string>
    <string name="sub_text_release">Release Date</string>
    <string name="sub_text_score">Score Movie</string>
    <string name="sub_text_crew">Crew Movie</string>
    <string name="crew_movie">Crew</string>
    <string name="overview_movie">Overview</string>

    <string-array name="data_title_movie">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Once Upon a Deadpool</item>
        <item>Robin Hood</item>
        <item>Venom</item>
    </string-array>

    <string-array name="data_release_movie">
        <item>October 3, 2018</item>
        <item>December 7, 2018</item>
        <item>April 25, 2018</item>
        <item>December 13, 2018</item>
        <item>October 24, 2018</item>
        <item>December 15, 2018</item>
        <item>November 21, 2018</item>
        <item>December 11, 2018</item>
        <item>November 21, 2018</item>
        <item>September 28, 2018</item>
    </string-array>

    <string-array name="data_score_movie">
        <item>75/100</item>
        <item>68/100</item>
        <item>83/100</item>
        <item>69/100</item>
        <item>80/100</item>
        <item>65/100</item>
        <item>68/100</item>
        <item>69/100</item>
        <item>58/100</item>
        <item>66/100</item>
    </string-array>

    <string-array name="data_description_movie">
        <item>Seasoned musician Jackson Maine discovers and falls in love with struggling artist Ally. She has just about given up on her dream to make it big as a singer until Jack coaxes her into the spotlight. But even as Ally\'s\ career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s\ half human, half Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s\ increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s\ past, Adonis Creed is up against the challenge of his life.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s\ PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s\ full of magic, wonder and zero F\'s\.</item>
        <item>A war hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>

    <string-array name="data_crew_movie">
        <item>Brandley Cooper, Will Fetters, Eric Roth, William A. Wllman, Robert Carson</item>
        <item>James Wan, Will Bell, Paul Noris, Mort Weisinger, David Leslie Johnson-McGoldrick, Geoff Johns</item>
        <item>Joe Russo, Anthony Russo, Stephen McFeely, Christopher Markus</item>
        <item>Susanne Bier, Josh Malerman, Eric Heisserer</item>
        <item>Anthony McCarten, Bryan Singer, Dexter Fletcher, Peter Morgan</item>
        <item>Christina Hodson, Travis Knight</item>
        <item>Sylvester Stallone, Steven Caple Jr., Jual Taylor, Cheo Hodari Coker, Sascha Penn</item>
        <item>David Leitch, Paul Wernick, Ryan Reynolds, Rhett Reese</item>
        <item>Ben Chandler, Otto Bathurst, David James Kelly</item>
        <item>David Michelinie, Mike Zeck, Todd McFarlane, Ruben Fleischer, Scott Rosenberg, Kelly Marcel, Jeff Pinkner</item>
    </string-array>

    <array name="data_poster">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_venom</item>
    </array>
</resources>
